<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.offer.UploadOfferScreen">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent" />




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/offer_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"
        android:background="#bebebe"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/remove_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/offer_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_remove"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_marginVertical="@dimen/_3sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        />

    <LinearLayout
        android:id="@+id/ln22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:gravity="center"
        android:weightSum="4"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/_10sdp"

        app:layout_constraintTop_toBottomOf="@+id/remove_icon">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_offer_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.4"
            android:background="@drawable/upload_btn_shape"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/download"
            android:textColor="@color/white"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:layout_weight="3.6"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="@font/cairo_semibold"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/add_image"
                android:textColor="@color/dark_blue_icons" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/offer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_7sdp"
        android:background="@drawable/background_edittext"
        android:hint="@string/title"
        android:gravity="right"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/ln22" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/offer_title"
        android:layout_marginHorizontal="@dimen/_10sdp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_offer_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@drawable/background_edittext"
            android:text="@string/start_date"
            android:inputType="date"
            android:textColor="@color/dark_blue"
            android:gravity="right"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/start_date_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_date"
            app:layout_constraintEnd_toStartOf="@+id/start_offer_date"
            app:layout_constraintTop_toTopOf="@+id/start_offer_date"
            app:layout_constraintBottom_toBottomOf="@+id/start_offer_date"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/end_offer_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@drawable/background_edittext"
            android:textColor="@color/dark_blue"
            android:inputType="date"
            android:text="@string/end_date"
            android:gravity="right"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            app:layout_constraintStart_toEndOf="@+id/end_date_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/end_date_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/end_offer_date"
            app:layout_constraintBottom_toBottomOf="@+id/end_offer_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/date_info"
        android:layout_marginHorizontal="@dimen/_10sdp"
        >


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/old_offer_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@drawable/background_edittext"
            android:hint="@string/old_price"
            android:gravity="right"
            android:inputType="number"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:textColorHint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_offer_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@drawable/background_edittext"
            android:hint="@string/new_price"
            android:gravity="right"
            android:inputType="number"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:textColorHint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card22"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_info"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/offer_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:gravity="start"
            android:hint="@string/add_note"
            android:padding="@dimen/_8sdp"
            android:layout_gravity="right"
            android:textColorHint="@color/dark_blue_icons"

            />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_offer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/cairo_semibold"
        android:paddingHorizontal="@dimen/_40sdp"
        android:text="@string/send"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card22" />


</androidx.constraintlayout.widget.ConstraintLayout>